# Data-Pot

./: .gitignore  .pre-commit-config.yaml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: pr_checks.yml
hello-world/: Makefile  activities.json  entrypoint.py  pyproject.toml
hello-world/src/: transform.py
hello-world/tests/: test_example.py
hello-world/tests/helpers/: pyspark_test.py
