[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-world"
version = "0.0.1"
dependencies = []

[project.optional-dependencies]
build = [
    "build == 0.10.0"
]
test = [
    "pyspark == 3.3.1",
]
lint = [
    "mypy == 1.0.0"
]

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true
